dynamic feature cards working

--- a/components/featured-card.html
+++ b/components/featured-card.html
@@ -1,15 +1,29 @@
-<div class="featured-card">
+<!-- First Product -->
+<div class="featured-card" data-product-code="8017">
     <div class="featured-card-image">
-        <img id="product-image" src="../img/yesh.jpg" alt="Product Image">
+        <img id="product-image-8017" src="../img/8017_gray.jpg" alt="Product Image">
     </div>
     <div class="featured-card-details">
-        <h3 class="product-title">8002 HEAVYWEIGHT TEE</h3>
-        <p class="product-price">$70</p>
+        <h3 class="product-title">8017 WINDGUARD OVERCOAT</h3>
+        <p class="product-price">$180</p>
         <div class="color-options">
-            <div class="color-box black" data-color="black"></div>
-            <div class="color-box olive" data-color="olive"></div>
-            <div class="color-box grey" data-color="grey"></div>
+            <div class="color-box gray" data-color="gray"></div>
             <div class="color-box brown" data-color="brown"></div>
         </div>
     </div>
-</div> 
+</div>
+
+<!-- Second Product -->
+<div class="featured-card" data-product-code="8004">
+    <div class="featured-card-image">
+        <img id="product-image-8004" src="../img/8004_gray.jpg" alt="Product Image">
+    </div>
+    <div class="featured-card-details">
+        <h3 class="product-title">8004 RELAXED FLEECE</h3>
+        <p class="product-price">$140</p>
+        <div class="color-options">
+            <div class="color-box gray" data-color="gray"></div>
+            <div class="color-box brown" data-color="brown"></div>
+        </div>
+    </div>
+</div>
