nearly finished landing page

--- a/components/featured-card.html
+++ b/components/featured-card.html
@@ -5,10 +5,12 @@
     </div>
     <div class="featured-card-details">
         <h3 class="product-title">8017 WINDGUARD OVERCOAT</h3>
-        <p class="product-price">$180</p>
-        <div class="color-options">
-            <div class="color-box gray" data-color="gray"></div>
-            <div class="color-box brown" data-color="brown"></div>
+        <div class="product-info-row">
+            <p class="product-price">$180</p>
+            <div class="color-options">
+                <div class="color-box gray" data-color="gray"></div>
+                <div class="color-box brown" data-color="brown"></div>
+            </div>
         </div>
     </div>
 </div>
@@ -20,10 +22,78 @@
     </div>
     <div class="featured-card-details">
         <h3 class="product-title">8004 RELAXED FLEECE</h3>
-        <p class="product-price">$140</p>
-        <div class="color-options">
-            <div class="color-box gray" data-color="gray"></div>
-            <div class="color-box brown" data-color="brown"></div>
+        <div class="product-info-row">
+            <p class="product-price">$140</p>
+            <div class="color-options">
+                <div class="color-box gray" data-color="gray"></div>
+                <div class="color-box brown" data-color="brown"></div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="featured-card" data-product-code="8010">
+    <div class="featured-card-image">
+        <img id="product-image-8010" src="../img/8010_beige.jpg" alt="Product Image">
+    </div>
+    <div class="featured-card-details">
+        <h3 class="product-title">8010 RELAXED COLLARED</h3>
+        <div class="product-info-row">
+            <p class="product-price">$140</p>
+            <div class="color-options">
+                <div class="color-box beige" data-color="beige"></div>
+                <div class="color-box black" data-color="black"></div>
+                <div class="color-box blue" data-color="blue"></div>
+                <div class="color-box white" data-color="white"></div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="featured-card" data-product-code="8001">
+    <div class="featured-card-image">
+        <img id="product-image-8001" src="../img/8001_black.jpg" alt="Product Image">
+    </div>
+    <div class="featured-card-details">
+        <h3 class="product-title">8001 LIGHT STRINGER</h3>
+        <div class="product-info-row">
+            <p class="product-price">$40</p>
+            <div class="color-options">
+                <div class="color-box black" data-color="black"></div>
+                <div class="color-box gray" data-color="gray"></div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="featured-card" data-product-code="8023">
+    <div class="featured-card-image">
+        <img id="product-image-8023" src="../img/8023_black.jpg" alt="Product Image">
+    </div>
+    <div class="featured-card-details">
+        <h3 class="product-title">8023 KNEECUT JORTS</h3>
+        <div class="product-info-row">
+            <p class="product-price">$100</p>
+            <div class="color-options">
+                <div class="color-box black" data-color="black"></div>
+                <div class="color-box blue" data-color="blue"></div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="featured-card" data-product-code="8003">
+    <div class="featured-card-image">
+        <img id="product-image-8003" src="../img/8003_black.jpg" alt="Product Image">
+    </div>
+    <div class="featured-card-details">
+        <h3 class="product-title">8003 WIDECUT CHINO</h3>
+        <div class="product-info-row">
+            <p class="product-price">$140</p>
+            <div class="color-options">
+                <div class="color-box black" data-color="black"></div>
+                <div class="color-box blue" data-color="blue"></div>
+            </div>
         </div>
     </div>
 </div>
