--- a/css/components.css
+++ b/css/components.css
@@ -23,20 +23,22 @@
     border: none;
     background-color: transparent;
     cursor: pointer;
-    max-width: 100%;
+    width: 100%;
     margin-bottom: 30px;
 }
-
 
 .featured-card-image {
     position: relative;
     width: 100%;
+    height: auto;
+    aspect-ratio: 369 / 492;
     overflow: hidden;
-    margin-bottom: 10px;
 }
 
 .featured-card-image img {
     width: 100%;
+    height: 100%;
+    object-fit: cover;
     display: block;
     transition: opacity 0.3s ease;
 }
@@ -48,15 +50,21 @@
 .product-title {
     font-family: 'Courier Prime', monospace;
     font-size: 16px;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
     text-transform: uppercase;
     font-weight: 400;
+    text-align: left;
+}
+
+.product-info-row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .product-price {
     font-size: 16px;
-    font-weight: bold;
-    margin-bottom: 10px;
+    color: #5f5f5f;
 }
 
 .color-options {
@@ -85,11 +93,24 @@
 }
 
 .color-box.gray {
-    background-color: #ccc;
+    background-color: #999999;
 }
 
 .color-box.brown {
     background-color: #8B4513;
+}
+
+.color-box.beige {
+    background-color: #e9d7af;
+}
+
+.color-box.blue {
+    background-color: #3c70b4;
+}
+
+.color-box.white {
+    background-color: #FFFFFF;
+    border: 1px solid #ddd;
 }
 
 .color-box.active {
