shop functionality working

--- a/components/sidebar.html
+++ b/components/sidebar.html
@@ -3,11 +3,10 @@
         <div class="sidebar-section">
             <ul>
                 <li><a href="#" data-category="all">all</a></li>
-                <li><a href="#" data-category="tops">tops</a></li>
-                <li><a href="#" data-category="hoodies">hoodies</a></li>
                 <li><a href="#" data-category="tees">tees</a></li>
+                <li><a href="#" data-category="hoodies">hoodies</a></li>
+                <li><a href="#" data-category="outerwear">outerwear</a></li>
                 <li><a href="#" data-category="singlets">singlets</a></li>
-                <li><a href="#" data-category="crewnecks">crewnecks</a></li>
             </ul>
         </div>
         <div class="sidebar-section">
