--- a/css/components.css
+++ b/css/components.css
@@ -247,33 +247,51 @@
 }
 
 .product-card img {
-    width: 40rem;
+    width: 100%;
 }
 
 .product-page-container {
+    display: flex;
     flex-direction: row;
-    display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
-    gap: 2rem;
-    align-items: start;
+    justify-content: flex-start;
+    align-items: flex-start;
+    width: 100%;
+    gap: 0;
 }
 
 
 .product-information-container {
     position: sticky;
-    top: 10rem;
-    margin-left: 3rem;
+    top: 30vh;
+    max-width: 25vw;
+    width: 100%;
+    align-self: left;
+    padding-left: 2vw;
 }
+
+
 
 .product-image-container {
     display: flex;
+    align-self: center;
     flex-direction: column;
+    align-items: center;
     gap: 1rem;
+    width: 40vw;
+    height: 100%;
+    margin-left: 2vw;
+}
+
+.product-image-container img {
+    align-self: center;
+    width: 80%
 }
 
 .product-add-container {
+    display: flex;
+    flex-direction: column;
     position: sticky;
-    top: 10rem;
+    top: 30vh;
 }
 
 .product-page-title {
@@ -292,20 +310,62 @@
     display: block;
 }
 
-.size-select {
-    padding: 8px 12px;
-    border: 1px solid #000;
-    background-color: #fff;
+.product-price {
+    font-size: 1.5rem;
+    font-weight: 200;
+    text-align: left;
+    letter-spacing: 1px;
+}
+
+.monospace-font {
     font-family: 'Courier Prime', monospace;
-    font-size: 16px;
+    font-size: 1.5rem;
     color: #000;
-    border-radius: 0;
+}
+
+.size-select {
+    padding: 8px 16px;
+    width: 25vw;
+    border: 2px solid #000;
+    background-color: #fff;
     appearance: none;
     -webkit-appearance: none;
     -moz-appearance: none;
     cursor: pointer;
+    margin-bottom: 1rem;
 }
 
-.size-select:focus {
-    outline: 1px solid #000;
+.add-to-cart {
+    margin-top: 1rem;
+    display: flex;
+    align-items: center;
+    width: 25vw;
+}
+
+.add-number-button {
+    border: 2px solid #000;
+    background-color: #fff;
+    cursor: pointer;
+    height: 3rem;
+    width: 7%;
+    text-align: center;
+}
+
+.add-number-input {
+    border-top: 2px solid #000;
+    border-bottom: 2px solid #000;
+    background-color: #fff;
+    height: 3rem;
+    width: 16%;
+    text-align: center;
+}
+
+.add-button {
+    border: 2px solid #000;
+    background: black;
+    color: white;
+    width: 70%;
+    height: 3rem;
+    cursor: pointer;
+    text-align: center;
 }
