--- a/components/navbar.html
+++ b/components/navbar.html
@@ -7,7 +7,7 @@
             <li><a href="/pages/shop.html">shop</a></li>
             <li><a href="/pages/lookbook.html">lookbook</a></li>
             <li><a href="/pages/currency.html">$aud</a></li>
-            <li><a href="/pages/cart.html">cart</a></li>
+            <li><a id="cart-toggle">cart</a></li>
             <li><a href="/pages/login.html">login</a></li>
         </ul>
     </nav>
