--- a/components/featured-card.html
+++ b/components/featured-card.html
@@ -1,12 +1,14 @@
 <!-- First Product -->
 <div class="featured-card" data-product-code="8017">
-    <div class="featured-card-image">
-        <img id="product-image-8017" src="../img/8017_gray.jpg" alt="Product Image">
+    <div class="featured-card-image" >
+        <a href="/pages/product.html?code=8017">
+            <img id="product-image-8017" src="../img/8017_gray.jpg" alt="Product Image">
+        </a>
     </div>
     <div class="featured-card-details">
         <h3 class="product-title">8017 WINDGUARD OVERCOAT</h3>
         <div class="product-info-row">
-            <p class="product-price">$180</p>
+            <p class="product-title">$180</p>
             <div class="color-options">
                 <div class="color-box gray" data-color="gray"></div>
                 <div class="color-box brown" data-color="brown"></div>
@@ -18,12 +20,14 @@
 <!-- Second Product -->
 <div class="featured-card" data-product-code="8004">
     <div class="featured-card-image">
-        <img id="product-image-8004" src="../img/8004_gray.jpg" alt="Product Image">
+        <a href="/pages/product.html?code=8004">
+            <img id="product-image-8004" src="../img/8004_gray.jpg" alt="Product Image">
+        </a>
     </div>
     <div class="featured-card-details">
         <h3 class="product-title">8004 RELAXED FLEECE</h3>
         <div class="product-info-row">
-            <p class="product-price">$140</p>
+            <p class="product-title">$140</p>
             <div class="color-options">
                 <div class="color-box gray" data-color="gray"></div>
                 <div class="color-box brown" data-color="brown"></div>
@@ -34,12 +38,14 @@
 
 <div class="featured-card" data-product-code="8010">
     <div class="featured-card-image">
-        <img id="product-image-8010" src="../img/8010_beige.jpg" alt="Product Image">
+        <a href="/pages/product.html?code=8010">
+            <img id="product-image-8010" src="../img/8010_beige.jpg" alt="Product Image">
+        </a>
     </div>
     <div class="featured-card-details">
         <h3 class="product-title">8010 RELAXED COLLARED</h3>
         <div class="product-info-row">
-            <p class="product-price">$95</p>
+            <p class="product-title">$95</p>
             <div class="color-options">
                 <div class="color-box beige" data-color="beige"></div>
                 <div class="color-box black" data-color="black"></div>
@@ -52,12 +58,14 @@
 
 <div class="featured-card" data-product-code="8001">
     <div class="featured-card-image">
-        <img id="product-image-8001" src="../img/8001_black.jpg" alt="Product Image">
+        <a href="/pages/product.html?code=8001">
+            <img id="product-image-8001" src="../img/8001_black.jpg" alt="Product Image">
+        </a>
     </div>
     <div class="featured-card-details">
         <h3 class="product-title">8001 LIGHT STRINGER</h3>
         <div class="product-info-row">
-            <p class="product-price">$40</p>
+            <p class="product-title">$40</p>
             <div class="color-options">
                 <div class="color-box black" data-color="black"></div>
                 <div class="color-box gray" data-color="gray"></div>
@@ -68,12 +76,14 @@
 
 <div class="featured-card" data-product-code="8023">
     <div class="featured-card-image">
-        <img id="product-image-8023" src="../img/8023_black.jpg" alt="Product Image">
+        <a href="/pages/product.html?code=8023">
+            <img id="product-image-8023" src="../img/8023_black.jpg" alt="Product Image">
+        </a>
     </div>
     <div class="featured-card-details">
         <h3 class="product-title">8023 KNEECUT JORTS</h3>
         <div class="product-info-row">
-            <p class="product-price">$100</p>
+            <p class="product-title">$100</p>
             <div class="color-options">
                 <div class="color-box black" data-color="black"></div>
                 <div class="color-box blue" data-color="blue"></div>
@@ -84,12 +94,14 @@
 
 <div class="featured-card" data-product-code="8003">
     <div class="featured-card-image">
-        <img id="product-image-8003" src="../img/8003_black.jpg" alt="Product Image">
+        <a href="/pages/product.html?code=8003">
+            <img id="product-image-8003" src="../img/8003_black.jpg" alt="Product Image">
+        </a>
     </div>
     <div class="featured-card-details">
         <h3 class="product-title">8003 WIDECUT CHINO</h3>
         <div class="product-info-row">
-            <p class="product-price">$140</p>
+            <p class="product-title">$140</p>
             <div class="color-options">
                 <div class="color-box black" data-color="black"></div>
                 <div class="color-box blue" data-color="blue"></div>
